# information-retrieval-twitter

./: .gitignore  Cargo.toml  README.md
rs/: Cargo.toml
rs/src/: data.rs  index.rs  main.rs
src/: data.rs  index.rs  main.rs
src/stopwords/: english.txt
