[package]
name = "information-retrieval-twitter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
bincode = "1.3.3"
csv = "1.1.6"
itertools = "0.10.1"
lazy_static = "1.4.0"
polars = { version = "0.17.0", features = ["serde", "is_in"] }
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
clap = "3.0.0-beta.5"
nalgebra = "0.29.0"

